fixed footer overlap with page content on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -11,17 +11,13 @@ li {
 }
 
 body {
-    margin-left: 2rem;
-}
-
-main {
-    margin-top: 2rem;
+    margin: 0 15px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 footer {
-    position: absolute;
-    width: 100%;
-    inset: auto auto 0 0;
     text-align: center;
-    padding-bottom: 1rem;
+    margin-top: auto;
 }
